import SwiftUI

enum AppearanceStyle: String, CaseIterable, Identifiable {
  case system = "System"
  case light = "Light"
  case dark = "Dark"

  var id: String { self.rawValue }

  var icon: String {
    switch self {
    case .system: return "circle.lefthalf.filled"
...
